--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,7 +21,7 @@
         height: 80px;
         width: 80px;
     }
-    .why-mohash {
+    .why-Operly {
         padding-top: 90px;
     }
     .top-banner-animation-video {
@@ -188,7 +188,7 @@
     .founder-logo {
         border-right: none;
     }
-    .why-mohash-video video {
+    .why-Operly-video video {
         width: 100%;
     }
     .mobile-device-hide {
@@ -304,30 +304,30 @@
     .mobile_mb_0 {
         margin-bottom: 0 !important;
     }
-    .why-mohash-caption {
+    .why-Operly-caption {
         padding: 0;
     }
-    .why-mohash-caption p {
+    .why-Operly-caption p {
         text-align: center;
         font-size: 14px;
         line-height: 20px;
     }
-    .why-mohash-caption h2 img {
+    .why-Operly-caption h2 img {
         width: 50px;
         margin-top: -7px;
     }
-    .why-mohash-caption h6 {
+    .why-Operly-caption h6 {
         display: none;
     }
-    .why-mohash-title {
+    .why-Operly-title {
         padding-bottom: 0 !important;
         margin-bottom: 0 !important;
     }
-    .why-mohash-caption h2 {
+    .why-Operly-caption h2 {
         text-align: center;
         font-size: 28px;
     }
-    .why-mohash-title h2 {
+    .why-Operly-title h2 {
         font-size: 30px;
         text-align: center;
     }
