--- a/css/styles.css
+++ b/css/styles.css
@@ -225,37 +225,37 @@ section.cryptowise-section {
 .join-part-box-image img {
     height: 35px;
 }
-.why-mohash-title h2 {
+.why-Operly-title h2 {
     font-size: 60px;
     font-weight: 600;
     color: #141414;
 }
 
-.why-mohash-image {
+.why-Operly-image {
     padding: 0px;
 }
 
-.why-mohash-video video {
+.why-Operly-video video {
     width: 400px;
     margin: auto;
 }
-.why-mohash-video {
+.why-Operly-video {
     text-align: center;
 }
-.why-mohash-caption h6 {
+.why-Operly-caption h6 {
     color: #141414;
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 10px;
 }
 
-.why-mohash-caption h2 img {
+.why-Operly-caption h2 img {
     width: 90px;
     margin-right: 3px;
     margin-top: -13px;
 }
 
-.why-mohash-caption h2 {
+.why-Operly-caption h2 {
     font-size: 54px;
     font-weight: 500;
     margin-bottom: 20px;
@@ -265,13 +265,13 @@ span.orange_text {
     color: #fe9a39;
 }
 
-.why-mohash-caption p {
+.why-Operly-caption p {
     font-size: 22px;
     color: #333;
     line-height: 30px;
 }
 
-.why-mohash-caption {
+.why-Operly-caption {
     padding: 30px;
 }
 
@@ -314,7 +314,7 @@ span.yellow_text {
 .border-right-none {
     border-right: none;
 }
-.black-bg-mohash {
+.black-bg-Operly {
     background: #141414;
 }
 .video-play-box {
