--- a/css/styles.css
+++ b/css/styles.css
@@ -979,7 +979,33 @@ ul.navbar-nav li a.text_:hover::after {
 }
 
 .footer-section {
-    color: #f5f5f5;
+    background: #f5f5f5;
+    color: #363636;
     padding-left: 15%;
     padding-right: 15%;
+}
+
+button.primary, input.button, a.button {
+    border: 0;
+    background-color: #2ecc71;
+    color: #fff;
+    padding: 8px 36px;
+    border-radius: 40px;
+}
+
+button.secondary {
+    border: 0;
+    background-color: #363636;
+    color: #fff;
+    padding: 8px 36px;
+    border-radius: 40px;
+}
+
+.email {
+    width: 100%;
+    padding: 8px 16px;
+    border-radius: 40px;
+    border-color: #eee;
+    border-style: solid;
+    margin-bottom: 10px;
 }
